--- a/src/AzerothReforged.Launcher/AzerothReforged.Launcher.csproj
+++ b/src/AzerothReforged.Launcher/AzerothReforged.Launcher.csproj
@@ -1,3 +1,6 @@
+<!-- ============================================
+File: src/AzerothReforged.Launcher/AzerothReforged.Launcher.csproj
+============================================= -->
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
@@ -9,4 +12,8 @@
   <ItemGroup>
     <PackageReference Include="CodeHollow.FeedReader" Version="1.2.2" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Assets\bg_main.png" />
+  </ItemGroup>
 </Project>
+
