--- a/src/AzerothReforged.Launcher/AzerothReforged.Launcher.csproj
+++ b/src/AzerothReforged.Launcher/AzerothReforged.Launcher.csproj
@@ -5,8 +5,6 @@
     <UseWPF>true</UseWPF>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-
-    <!-- custom icon -->
     <ApplicationIcon>Assets\launcher.ico</ApplicationIcon>
   </PropertyGroup>
 
@@ -14,12 +12,9 @@
     <PackageReference Include="CodeHollow.FeedReader" Version="1.2.2" />
   </ItemGroup>
 
-  <!-- resources -->
   <ItemGroup>
     <Resource Include="Assets\bg_main.png" />
-    <None Include="launcher.cfg">
-      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
-    </None>
+    <Resource Include="Assets\logo.png" />
     <Content Include="Assets\launcher.ico" />
   </ItemGroup>
 </Project>
